--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
             <form action="/action_page.php" target="_blank">
                 Name: <br><input type="text" name="fullname" placeholder="John Smith"><br>
                 Email: <br><input type="text" name="email" size="35" placeholder="example@gmail.com"><br>
-                Message: <br><input type="text" name="Message" placeholder="Write something..."><br>
+                Message: <br><textarea rows="5">Write something...</textarea><br>
                 <input type="submit" value="Submit">
               </form>   
             </div>>
